Rename Schemas in api.yml
