# school-manager-api/src/main/resources/api.yml
@@ -40,7 +40,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Student"
+                  $ref: "#/components/schemas/StudentModel"
         "500":
           $ref: "#/components/responses/500ServerError"
   "/students/get/{id}":
@@ -57,7 +57,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Student"
+                $ref: "#/components/schemas/StudentModel"
         "404":
           $ref: "#/components/responses/404NotFound"
         "500":
@@ -88,7 +88,7 @@ paths:
                 content:
                   application/json:
                     schema:
-                      $ref: "#/components/schemas/Message"
+                      $ref: "#/components/schemas/MessageModel"
               responses:
                 "200":
                   description: OK
@@ -98,7 +98,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Student"
+                $ref: "#/components/schemas/StudentModel"
           links:
             GetStudentById:
               $ref: "#/components/links/GetStudentById"
@@ -122,7 +122,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Student"
+                $ref: "#/components/schemas/StudentModel"
           links:
             GetStudentById:
               $ref: "#/components/links/GetStudentById"
@@ -147,7 +147,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Lesson"
+                  $ref: "#/components/schemas/LessonModel"
         "500":
           $ref: "#/components/responses/500ServerError"
   /timetable/add:
@@ -164,7 +164,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Lesson"
+                $ref: "#/components/schemas/LessonModel"
           links:
             GetLesson:
               $ref: "#/components/links/GetLesson"
@@ -188,7 +188,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Lesson"
+                $ref: "#/components/schemas/LessonModel"
           links:
             GetLesson:
               $ref: "#/components/links/GetLesson"
@@ -215,7 +215,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Homework"
+                  $ref: "#/components/schemas/HomeworkModel"
         "500":
           $ref: "#/components/responses/500ServerError"
   /homework/add:
@@ -232,7 +232,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Homework"
+                $ref: "#/components/schemas/HomeworkModel"
         "415":
           $ref: "#/components/responses/415UnsuppotedType"
         "500":
@@ -253,7 +253,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Homework"
+                $ref: "#/components/schemas/HomeworkModel"
         "404":
           $ref: "#/components/responses/404NotFound"
         "415":
@@ -262,7 +262,7 @@ paths:
           $ref: "#/components/responses/500ServerError"
 components:
   schemas:
-    Student:
+    StudentModel:
       type: object
       properties:
         id:
@@ -273,7 +273,7 @@ components:
           type: string
         group:
           type: string
-    Lesson:
+    LessonModel:
       type: object
       properties:
         id:
@@ -285,7 +285,7 @@ components:
           type: string
         subject:
           type: string
-    Homework:
+    HomeworkModel:
       type: object
       properties:
         id:
@@ -301,7 +301,7 @@ components:
         deadline:
           type: string
           pattern: '^([12]\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01]))$'
-    Message:
+    MessageModel:
       type: object
       properties:
         text:
@@ -344,7 +344,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Student"
+            $ref: "#/components/schemas/StudentModel"
           examples:
             StudentBodyExample:
               $ref: "#/components/examples/StudentBody"
@@ -353,7 +353,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Lesson"
+            $ref: "#/components/schemas/LessonModel"
           examples:
             LessonBodyExample:
               $ref: "#/components/examples/LessonBody"
@@ -362,7 +362,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Homework"
+            $ref: "#/components/schemas/HomeworkModel"
           examples:
             HomeworkBodyExample:
               $ref: "#/components/examples/HomeworkBody"
