# school-manager-server/src/main/java/com/hillel/multi/presentation/controllers/HomeworkManagerController.java
@@ -1,7 +1,7 @@
 package com.hillel.multi.presentation.controllers;
 
 import com.hillel.api.HomeworkManagerApi;
-import com.hillel.model.Homework;
+import com.hillel.model.HomeworkModel;
 import com.hillel.multi.service.HomeworkManagerService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -17,20 +17,20 @@ public class HomeworkManagerController implements HomeworkManagerApi {
     private HomeworkManagerService homeworkManagerService;
 
     @Override
-    public ResponseEntity<List<Homework>> getHomework(String group, String subject) {
-        List<Homework> homeworks = homeworkManagerService.getHomework(group, subject);
-        return new ResponseEntity<>(homeworks, HttpStatus.OK);
+    public ResponseEntity<List<HomeworkModel>> getHomework(String group, String subject) {
+        List<HomeworkModel> homeworkModels = homeworkManagerService.getHomework(group, subject);
+        return new ResponseEntity<>(homeworkModels, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Homework> addHomework(Homework homework) {
-        Homework body = homeworkManagerService.addHomework(homework);
+    public ResponseEntity<HomeworkModel> addHomework(HomeworkModel homeworkModel) {
+        HomeworkModel body = homeworkManagerService.addHomework(homeworkModel);
         return new ResponseEntity<>(body, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<Homework> updateHomework(Integer id, Homework homework) {
-        Homework body = homeworkManagerService.updateHomework(id, homework);
+    public ResponseEntity<HomeworkModel> updateHomework(Integer id, HomeworkModel homeworkModel) {
+        HomeworkModel body = homeworkManagerService.updateHomework(id, homeworkModel);
         return new ResponseEntity<>(body, HttpStatus.OK);
     }
 }
