# school-manager-server/src/main/java/com/hillel/multi/presentation/controllers/TimetableManagerController.java
@@ -1,7 +1,7 @@
 package com.hillel.multi.presentation.controllers;
 
 import com.hillel.api.TimetableManagerApi;
-import com.hillel.model.Lesson;
+import com.hillel.model.LessonModel;
 import com.hillel.multi.service.TimetableManagerService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -17,20 +17,20 @@ public class TimetableManagerController implements TimetableManagerApi {
     private TimetableManagerService timetableManagerService;
 
     @Override
-    public ResponseEntity<List<Lesson>> getLessons(String group, String subject) {
-        List<Lesson> lessons = timetableManagerService.getLessons(group, subject);
-        return new ResponseEntity<>(lessons, HttpStatus.OK);
+    public ResponseEntity<List<LessonModel>> getLessons(String group, String subject) {
+        List<LessonModel> lessonModels = timetableManagerService.getLessons(group, subject);
+        return new ResponseEntity<>(lessonModels, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Lesson> addLesson(Lesson lesson) {
-        Lesson body = timetableManagerService.addLesson(lesson);
+    public ResponseEntity<LessonModel> addLesson(LessonModel lessonModel) {
+        LessonModel body = timetableManagerService.addLesson(lessonModel);
         return new ResponseEntity<>(body, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<Lesson> updateLesson(Integer id, Lesson lesson) {
-        Lesson body = timetableManagerService.updateLesson(id, lesson);
+    public ResponseEntity<LessonModel> updateLesson(Integer id, LessonModel lessonModel) {
+        LessonModel body = timetableManagerService.updateLesson(id, lessonModel);
         return new ResponseEntity<>(body, HttpStatus.OK);
     }
 }
