# school-manager-server/src/main/java/com/hillel/multi/service/StudentsManagerService.java
@@ -1,8 +1,8 @@
 package com.hillel.multi.service;
 
-import com.hillel.model.Student;
-import com.hillel.multi.configuration.exceptions.NotFoundException;
+import com.hillel.model.StudentModel;
 import com.hillel.multi.configuration.exceptions.MediaTypeException;
+import com.hillel.multi.configuration.exceptions.NotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -11,11 +11,11 @@ import java.util.Objects;
 @Service
 public class StudentsManagerService {
 
-    public List<Student> getStudents() {
+    public List<StudentModel> getStudents() {
         return null;
     }
 
-    public Student getStudentById(Integer id) {
+    public StudentModel getStudentById(Integer id) {
         // Example of using exception
         if (id < 0) {
             throw new NotFoundException("Student with id " + id + " is not found.");
@@ -24,21 +24,21 @@ public class StudentsManagerService {
         return null;
     }
 
-    public Student addStudent(Student student) {
+    public StudentModel addStudent(StudentModel studentModel) {
         // Example of using exception
-        if (Objects.isNull(student.getFirstName())) {
+        if (Objects.isNull(studentModel.getFirstName())) {
             throw new MediaTypeException("First name can not be null");
         }
 
-        return student;
+        return studentModel;
     }
 
-    public Student updateStudent(Integer id, Student student) {
+    public StudentModel updateStudent(Integer id, StudentModel studentModel) {
         // Example of using exception
         if (id < 0) {
             throw new NotFoundException("Student with id " + id + " is not found.");
         }
 
-        return student;
+        return studentModel;
     }
 }
