# school-manager-server/src/main/java/com/hillel/multi/service/TimetableManagerService.java
@@ -1,6 +1,6 @@
 package com.hillel.multi.service;
 
-import com.hillel.model.Lesson;
+import com.hillel.model.LessonModel;
 import com.hillel.multi.configuration.exceptions.MediaTypeException;
 import com.hillel.multi.configuration.exceptions.NotFoundException;
 import org.springframework.stereotype.Service;
@@ -11,25 +11,25 @@ import java.util.Objects;
 @Service
 public class TimetableManagerService {
 
-    public List<Lesson> getLessons(String group, String subject) {
+    public List<LessonModel> getLessons(String group, String subject) {
         return null;
     }
 
-    public Lesson addLesson(Lesson lesson) {
+    public LessonModel addLesson(LessonModel lessonModel) {
         // Example of using exception
-        if (Objects.isNull(lesson.getSubject())) {
+        if (Objects.isNull(lessonModel.getSubject())) {
             throw new MediaTypeException("Subject can not be null");
         }
 
-        return lesson;
+        return lessonModel;
     }
 
-    public Lesson updateLesson(Integer id, Lesson lesson) {
+    public LessonModel updateLesson(Integer id, LessonModel lessonModel) {
         // Example of using exception
         if (id < 0) {
             throw new NotFoundException("Lesson with id " + id + " is not found.");
         }
 
-        return lesson;
+        return lessonModel;
     }
 }
